# xmirror

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml
.github/workflows/: release.yml  test.yml
client/: Cargo.toml
client/src/: dummy.rs  macos.rs  main.rs
event/: Cargo.toml
event/src/: event.rs  lib.rs  proto.rs
server/: Cargo.toml
server/src/: dummy.rs  main.rs  x11.rs
