[package]
name = "xmirror"
description = "Capture keyboard and mouse events from a local machine and mirror them to a remote server over the network."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
xmirror-event = { path = "../event", version = "0.1.0" }

[target.'cfg(target_os="macos")'.dependencies]
core-graphics.workspace = true
core-foundation.workspace = true
