[package]
name = "xmirror-event"
description = "Cross-platform input event types for xmirror."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bitflags.workspace = true
