[package]
name = "xmirror-server"
description = "Locally mirror remote keyboard and mouse events sent over the network."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
xmirror-event = { path = "../event", version = "0.1.0" }

[target.'cfg(target_os = "linux")'.dependencies]
x11.workspace = true
